make fonts customizable and update version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
-    "declarationDir": "./dist"
+    "declarationDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "react-binjo": ["./src/index.ts"]
+    }
   },
   "include": ["src", "examples"]
 }
