--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "react-binjo": "./dist/cli/generate-csv.js"
+    "react-binjo": "dist/cli/generate-csv.js"
   },
   "exports": {
     ".": {
